# avenir

./: .gitignore  README.md  install-avenir-ubuntu-20.04.sh  todos.md
networks/: edge-core-topo-1.p4  edge-core-topo-diamond.py
notes/: algorithm.md  anecdotes.md  example.md  sythesis.md
onos-exploration/: README.md
onos-launch-scripts/: .launch-onos.py.swp  launch-onos.py
p4code/: sr_mac.p4  sr_mac_p4_16.p4
paper/: 3_0_syntactic_transforms.tex  3_1_relational_approach.tex  3_system.tex  Makefile  examples.tex  macros.tex  old_bounded_model_checking.tex  report.tex
scripts/: ubuntu-install.sh
sigcomm/: Makefile  acmart.cls  body.tex  example.txt  example_exact.txt  gcl.tex  macros.tex  paper.tex  reference.bib  running-example.tex
synthesis/: .gitignore  .ocamlformat  Makefile  README.md  ablate.sh  bcm_full_soln.csv  cache_ablate.sh  dune-project  examples.md  fabric.edits  holes.md  micro.py  plotter.py  run-avenir-onos.sh  tests.csv  todolist.md  up4.edits  up4assume  up4fvs.csv
synthesis/lib/: ActionGenerator.ml  ActionGenerator.mli  Ast.ml  Ast.mli  Benchmark.ml  Bishtbl.ml  CandidateMap.ml  Category.ml  CheckAndSet.ml  Classbenching.ml  Cmd.ml  Cmd.mli  CompilerOpts.ml  ConstantProp.ml  DeadCode.ml  Diagram.ml  EAbstr.ml  EAbstr.mli  Edit.ml  EditSimpl.ml  EditSimpl.mli  Encode.ml  Expr.ml  Expr.mli  FSM.ml  FastCX.ml  Graph.ml  Hint.ml  Hint.mli  Hole.ml  Injection.ml  Injection.mli  Instance.ml  Instance.mli  Interactive.ml  Lexer.mll  Log.ml  Log.mli  Manip.ml  Manip.mli  (+60 more)
synthesis/lib/parsing/: dune  lexer.mll  parser.mly
(+513 files in other folders)
