(menhir
  (flags --no-stdlib --explain)
  (modules Parser))

(ocamllex (modules Lexer))

(library
  (name avenir)
  (libraries core bignum async cohttp-async shell z3 petr4 ANSITerminal ipaddr)
  (inline_tests)
  (preprocess (pps ppx_jane ppx_inline_test ppx_deriving_yojson ppx_deriving.std))
  (ocamlc_flags -custom -cclib -lstdc++)
  (ocamlopt_flags -cclib -lstdc++))
